--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
             display: flex; flex-direction: column;
         }
 
+        a { text-decoration: none; color: inherit; } /* Reset thẻ a */
+
         /* Ẩn hiện các View */
         .view-section { display: none; width: 100%; height: 100%; }
         .view-section.active { display: flex; flex-direction: column; }
@@ -54,7 +56,9 @@
             border-radius: 20px; box-shadow: 0 10px 30px -10px rgba(0,0,0,0.1);
             text-align: center; margin: auto;
         }
-        .st-logo { width: 80px; margin-bottom: 10px; }
+        .st-logo { width: 80px; margin-bottom: 10px; cursor: pointer; transition: transform 0.2s; }
+        .st-logo:hover { transform: scale(1.05); }
+
         .st-title { color: var(--primary); margin: 0; font-size: 20px; font-weight: 800; text-transform: uppercase; }
         
         .st-group { margin-bottom: 15px; text-align: left; }
@@ -153,6 +157,7 @@
             flex: 0 0 auto; background: white; border-top: 1px solid var(--border); padding: 10px 20px;
             display: flex; justify-content: space-between; align-items: center; font-size: 12px; color: var(--text-light); z-index: 10;
         }
+        footer a:hover { color: var(--primary); text-decoration: underline; }
 
         @media print {
             body { background: white; display: block; height: auto; overflow: visible; }
@@ -173,7 +178,10 @@
     <!-- ======================================================= -->
     <div id="student-view" class="view-section">
         <div class="st-card">
-            <img src="https://lh3.googleusercontent.com/d/1oyqHPWlAPO2plc5tDbZnPwpbb4xV6bkL" class="st-logo">
+            <!-- Link ảnh HUIT -->
+            <a href="https://huit.edu.vn/" target="_blank">
+                <img src="https://lh3.googleusercontent.com/d/1oyqHPWlAPO2plc5tDbZnPwpbb4xV6bkL" class="st-logo" title="Truy cập website HUIT">
+            </a>
             <h2 class="st-title">Điểm Danh Online</h2>
             <p style="color:#666; font-size:13px; margin-bottom:20px;">Trường ĐH Công Thương TP.HCM</p>
 
@@ -216,7 +224,8 @@
     <div id="teacher-view" class="view-section">
         <header>
             <div class="header-left">
-                <a href="#" class="logo-link">
+                <!-- Link ảnh HUIT -->
+                <a href="https://huit.edu.vn/" target="_blank" class="logo-link">
                     <img src="https://lh3.googleusercontent.com/d/1oyqHPWlAPO2plc5tDbZnPwpbb4xV6bkL" alt="Logo">
                 </a>
                 <div class="header-info">
@@ -293,8 +302,11 @@
             </div>
         </div>
 
+        <!-- Footer Đã Sửa: LAZINET -->
         <footer>
-            <div class="footer-left">&copy; 2025 <strong>HUIT Attendance</strong></div>
+            <div class="footer-left">
+                &copy; 2025 <a href="https://lazinet.com/" target="_blank"><strong>LAZINET</strong></a>. All rights reserved.
+            </div>
             <div class="footer-right">Developed by Student HUIT</div>
         </footer>
         <div id="qr-hidden" style="display:none;"></div>
@@ -469,16 +481,34 @@
             }
         }
 
+        // --- CẬP NHẬT: TẢI PDF SỬA TÊN VÀ TRANG ---
         function downloadPDF() {
             const element = document.getElementById('paper');
             const btn = document.querySelector('.btn-pdf');
             const oldHtml = btn.innerHTML;
             btn.innerHTML = "<i class='fas fa-spinner fa-spin'></i> Đang xử lý..."; btn.disabled = true;
+
+            // 1. Tạo tên file theo thời gian: Mã_yymmddhhmm.pdf
+            const now = new Date();
+            const yy = String(now.getFullYear()).slice(-2);
+            const mm = String(now.getMonth() + 1).padStart(2, '0');
+            const dd = String(now.getDate()).padStart(2, '0');
+            const hh = String(now.getHours()).padStart(2, '0');
+            const min = String(now.getMinutes()).padStart(2, '0');
+            const fileName = `Mã_${yy}${mm}${dd}${hh}${min}.pdf`;
+
+            // 2. Cấu hình PDF để không bị thừa trang
             const opt = {
-                margin: 0, filename: 'QR_Code_HUIT.pdf', image: { type: 'jpeg', quality: 1 },
-                html2canvas: { scale: 2 }, jsPDF: { unit: 'mm', format: [currentPaperW, currentPaperH], orientation: 'portrait' }
+                margin: 5, // Margin nhỏ (5mm) để nội dung không bị đẩy sang trang 2
+                filename: fileName,
+                image: { type: 'jpeg', quality: 0.98 },
+                html2canvas: { scale: 2, useCORS: true },
+                jsPDF: { unit: 'mm', format: [currentPaperW, currentPaperH], orientation: 'portrait' }
             };
-            html2pdf().set(opt).from(element).save().then(() => { btn.innerHTML = oldHtml; btn.disabled = false; });
+
+            html2pdf().set(opt).from(element).save().then(() => { 
+                btn.innerHTML = oldHtml; btn.disabled = false; 
+            });
         }
 
         function resetDefaults() {
@@ -600,4 +630,3 @@
     </script>
 </body>
 </html>
-
